--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,16 @@
     <div class="container">
       <%= render 'layouts/header' %>
       <section class="round">
+        <% flash.each do |key, value| %>
+          <div class="flash <%= key %>"><%= value %></div>
+        <% end %>
+      </section>
+      <section class="round">
         <%= yield %>
       </section>
+    </div>
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
-    </div>
   </body>
 </html>
 
