--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,16 @@
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Help", help_path %></li>
-      <li><%= link_to "Sign in", '#' %></li>
+      <% if signed_in? %>
+        <li><%= link_to "Profile", current_user %></li>
+      <% end %>
+      <li>
+      <% if signed_in? %>
+        <%= link_to "Sign out", signout_path, :method => :delete %>
+      <% else %>
+        <%= link_to "Sign in", signin_path %>
+      <% end %>
+      </li>
     </ul>
   </nav>
 </header>
