--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,13 @@
       </td>
       <td class="sidebar round">
         <%= render 'shared/user_info' %>
+        <%= render 'shared/stats' %>
       </td>
     </tr>
   </table>
+  <% unless @feed_items.empty? %>
+    <%= will_paginate(@feed_items) %>
+  <% end %>
 <% else %>
   <h1>Sample App</h1>
 
